
[project]
name = "concurrent-interrupts"
version = "0.1.0"
description = "ReACT Agent with Concurrent Interrupt Handling"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "langchain-openai>=0.3.28, <0.4",
    "langgraph>=0.6.0, <0.7",
    "langgraph-sdk>=0.2.0, <0.3",
    "langgraph-cli>=0.3.6, <0.4",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.12.0",
    "typing-extensions>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[[project.authors]]
name = "lgesuellip"
email = "lautaro@pampa.ai"

[tool.setuptools]
packages = ["concurrent-interrupts"]

[tool.setuptools.package-dir]
"concurrent-interrupts" = "src"

[tool.setuptools.package-data]
"*" = ["py.typed"]
